# ChangeLog for dev-perl/IO-Interface
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Interface/ChangeLog,v 1.28 2012/03/25 16:10:50 armin76 Exp $

  25 Mar 2012; Raúl Porcel <armin76@gentoo.org> IO-Interface-1.03.ebuild,
  IO-Interface-1.60.0.ebuild:
  Drop alpha/ia64/sparc keywords

  09 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  IO-Interface-1.60.0.ebuild:
  x86 stable wrt bug #400147

  08 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  IO-Interface-1.60.0.ebuild:
  x86 stable wrt bug #400147

  01 Mar 2012; Brent Baude <ranger@gentoo.org> IO-Interface-1.60.0.ebuild:
  Marking IO-Interface-1.60.0 ppc for bug 400147

  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> IO-Interface-1.60.0.ebuild:
  Stable for amd64, wrt bug #400147

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -IO-Interface-1.05.ebuild:
  Cleanup

*IO-Interface-1.60.0 (22 Jul 2011)

  22 Jul 2011; Torsten Veller <tove@gentoo.org> +IO-Interface-1.60.0.ebuild:
  Version bump

  25 May 2009; Brent Baude <ranger@gentoo.org> IO-Interface-1.05.ebuild:
  keyworded ~arch for ppc64, bug 270821

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -IO-Interface-0.98.ebuild,
  -IO-Interface-1.02.ebuild:
  Cleanup

*IO-Interface-1.05 (05 Sep 2008)

  05 Sep 2008; Torsten Veller <tove@gentoo.org> +IO-Interface-1.05.ebuild:
  Version bump

  11 Jul 2007; Raúl Porcel <armin76@gentoo.org> IO-Interface-1.03.ebuild:
  ia64 stable

  11 Jul 2007; Raúl Porcel <armin76@gentoo.org> IO-Interface-1.03.ebuild:
  x86 stable

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  IO-Interface-1.03.ebuild:
  ppc stable

  10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  IO-Interface-1.03.ebuild:
  sparc stable

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  IO-Interface-1.03.ebuild:
  Marking stable amd64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> IO-Interface-1.02.ebuild:
  Stable on x86, bug #169152.
