@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Interface/IO-Interface-1.03.ebuild,v 1.7 2012/03/25 16:10:50 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Interface/IO-Interface-1.03.ebuild,v 1.8 2012/03/28 17:42:08 armin76 Exp $
 
 inherit perl-module
 
@@ -12,6 +12,6 @@ IUSE=""
 
 SLOT="0"
 LICENSE="|| ( Artistic GPL-2 )"
-KEYWORDS="amd64 ppc x86"
+KEYWORDS="alpha amd64 ppc x86"
 
 SRC_TEST="do"
