@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Interface/IO-Interface-1.60.0.ebuild,v 1.5 2012/03/25 16:10:50 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Interface/IO-Interface-1.60.0.ebuild,v 1.6 2012/03/28 17:42:08 armin76 Exp $
 
 EAPI=4
 
@@ -11,7 +11,7 @@ inherit perl-module
 DESCRIPTION="Perl extension for access to network card configuration information"
 
 SLOT="0"
-KEYWORDS="amd64 ppc ~ppc64 x86"
+KEYWORDS="alpha amd64 ppc ~ppc64 x86"
 IUSE=""
 
 SRC_TEST="do"
