@@ -3,14 +3,14 @@ Hash: SHA1
 
 DIST IO-Interface-1.03.tar.gz 9630 RMD160 1594d63a58fcf22b255cb0cf7f0266e1ce4937d5 SHA1 35754a63d26eabd00c43220a7dc7e1fe9b24cf05 SHA256 c5bba722ea611d3f021ec16c1c2e1b4935079d3ccbf67d054a71c4e376501f61
 DIST IO-Interface-1.06.tar.gz 10339 RMD160 f06a3440396eeea7cb09927778571bd93cf10344 SHA1 d775e8403487ca3ad86af9db3984ad19b0c0c997 SHA256 6c07bc9cebcec2ec58a6e6969a14c8d4f4959869332d53eab3b65079541cdf77
-EBUILD IO-Interface-1.03.ebuild 525 RMD160 87b915958ea498fe535ca09e08a0feb141aa25b4 SHA1 c10d2239394c6f0911c087663c46a87ffb881ca9 SHA256 6917cc188d1fb9b8bf4dc7d43bb80ec345592040e39c7f75bdd9112e9e11f55b
-EBUILD IO-Interface-1.60.0.ebuild 446 RMD160 ba725802e251019d13cd08eb29d2f82accfd65d5 SHA1 707abfa24212e89a9987e2331c362cbf04361e4f SHA256 1b77f4d075940e85ecac818d3249cb63b7c4a382af03ae50196181309c42d75d
-MISC ChangeLog 3282 RMD160 948c8158ce032a9cecd96653f035e55a97e37b64 SHA1 949ceacfb481f68d271743af12845a10ab6dab2d SHA256 b2896664b5939a779a648e9d80433bff2692eac760abe570586294517e08ff1d
+EBUILD IO-Interface-1.03.ebuild 531 RMD160 e6db045a869201d10b1b2138f6cc8abed6e219f6 SHA1 925bb35c3c6f0a79dcebc1fec0349479f32f08ee SHA256 e9a59203001ae0ba45a7345673c1f09ba616ad5d1ee06090821e82e9c0b24d67
+EBUILD IO-Interface-1.60.0.ebuild 452 RMD160 f1a5a3d81f6b64ce2dae33365752674f8b018408 SHA1 d058243f10dd21b0b5b73c991a7c7f962e92f1da SHA256 6e225e3d8edb97da6425714828110c60add206caa65e51ad75e411ee355e5e43
+MISC ChangeLog 3413 RMD160 68a9f67c1f8b36be92d1dc08b052c053871ebeca SHA1 1768bc73d69c397b83aa1c48aa9a2c9de780b4ec SHA256 45a271faae12daa3444ea09d5e37490b17621e09f47ffcfe638c0f45ee9d5a43
 MISC metadata.xml 238 RMD160 f8dc18b9cf4956e64e2cf5a060c3eb6610a37498 SHA1 09b2e31825d7840e7be2a9c718037614f6c2e278 SHA256 d249ee13d66288f3c57fc78bd7c468f56cbeccceeb6f2c5a951af88ea2c68614
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk9vQ5AACgkQuQc30/atMkCoyACfStSvBStVieSueqaVw7+hH/Xc
-5bEAn11UF58bXpttL/M5aFp15OtqqQ26
-=jr2l
+iEYEARECAAYFAk9zTXYACgkQuQc30/atMkDXHQCfYmA/zLWPgfNCSZvyYufjV5w4
+ig4AnAzdk2B3JuLvqj0Nh66ClpGPKASK
+=Bcbl
 -----END PGP SIGNATURE-----
