@@ -1,14 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST Lirc-Client-1.54.tar.gz 12870 RMD160 7ca89e218c09fe9d6ca157f311c0bc0d3d2f4d29 SHA1 076701ea100bcd7a2fdf75064fb207fc5672a430 SHA256 a0b57cd2157539382d41806a6006210fb95e49bf14be07793eca8bf69c7fca8f
-EBUILD Lirc-Client-1.540.0.ebuild 584 RMD160 7e58637b18b4a6012520e73092943c94b75cb01c SHA1 bacff61acdb858a7189747bdaa0b25cb07a0796b SHA256 190177a69c88654d7fb54cc6a0b9dbf956d5b4cfbe405a06beb3b9ed25ad2ea6
-MISC ChangeLog 871 RMD160 520d5e42b765947348e8ea885f8bb4ed714196f0 SHA1 6b8e0c2f1a2bac69118cf0d28a222e67e14082dc SHA256 32fae36fd2e047a1a9c267938576bee0bdc172b82afe2f777f53f0da0effb11f
+EBUILD Lirc-Client-1.540.0.ebuild 582 RMD160 08a4ce8ce274cc9cbaadc3d65794a570b910a1e7 SHA1 313687961935b751af1ae3522ea5b2cb9373afda SHA256 7930026bed8e4843eea4fc2e8f5d365d18387048e85cc908d76e56273143974f
+MISC ChangeLog 984 RMD160 0f193874cc78a0e0e8ef6e4100f8a7801fe90530 SHA1 52ebe003abec5e0b453492987ccc8fdced29b73e SHA256 e292299906e95dd13f284149d94134a335c46c6c0de1c54bbc3202a9d0916216
 MISC metadata.xml 261 RMD160 12276f64b00d0910d75d37bfa048e404a0bda1be SHA1 a3adca5b3107970e57bb135858210bc990a28c87 SHA256 15f2d4c516626b134f9fc078167c310e54fdc6ae0513133011457e1ef9dc4114
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk4y++EACgkQV3J2n04EauxDLgCgnJjZ3N5Cu1zTda0m8ncw414c
-6qoAoMwaAXH5VgnLIcuSi9B4gd0UMV7s
-=2Roz
+iQEcBAEBCgAGBQJPdERQAAoJEOTDgjZ80txdC4AH/1Vv31nHRJl7jaIQtlWWMv6j
+AYRJ0/48yz9koOuPHlXdaSPEUw+KYU7Ih/X/ERhLJJrkvbm7dyOEhKtzYlqGs0Xq
+VP1q44/0gzZeRx/xPLw3JmDbvYWbZddqwMZigkMmea8ivZcDuWLN+ue7ZZ+h4W4K
+EefrgobE7dtfcx6oiZqdArjzLqeGTA0dC6I0iWuA2aX1CNnjveItlm4d9bsexuJ9
+AOSyU0pPz+GGlx+n/E7csCpeg64awYCk56Fph6OF/xgsQGYPdw2HOPEaLtkv1Ag7
+SxsMPVn4mI3H9qygWib2+FqASXIPWjvPnhl8NjIKt45okUXvCi4DRTbFsMO8Dfc=
+=3H4G
 -----END PGP SIGNATURE-----
