@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 DIST Test-SubCalls-1.09.tar.gz 25727 RMD160 f3df43ad4b7cd2117d277367af7b4dcf248615d4 SHA1 a661586dd732fbf6aa5803ff8f64d727a5d35704 SHA256 a334b0457da338d79be2dbb62d403701fc90f7607df840115ff45ee1e2bd6e70
-EBUILD Test-SubCalls-1.90.0.ebuild 565 RMD160 ca8765b16a88fb3c1f5cab16d844433ae9697a2d SHA1 956401808a5735032757b793cb3c01d04dbf5201 SHA256 f562f7e884369541badf5dae3f67dc6ade64dd2fd55b27d8d113eda83581566a
-MISC ChangeLog 3065 RMD160 cc95a2c25c104431be968889d311f45910e7f3dd SHA1 81144a73dcde9d3b30255726813393dd457091f8 SHA256 5485cfe2b2cf0fec7f8637017664062bf58226d00cef85fa65b84f26cc3a330b
+EBUILD Test-SubCalls-1.90.0.ebuild 562 RMD160 3554ee3daa24553fcd47172626ae2d6ea6dd3cae SHA1 732e26d090c8ad93dd06b1a09ad4e849594e6b1e SHA256 3038c5cad3d73c1c56b1ebfee9fc86a70e05f07e7b8d26b14560de4ddcd71487
+MISC ChangeLog 3169 RMD160 8fcd941a38e0f0277147de4a07d5e58c50fa4e85 SHA1 10d391ce291803d066b18fef5c2560970fbfab24 SHA256 22008a4000283c05852d733663ad29392b40e6a92b9ac23330456dd45107a4fc
 MISC metadata.xml 239 RMD160 d4124bf5b3dddeb38b0eed4308c0bee965f4d9e1 SHA1 92e76135de64e2cd9c6ec590620db0ec8145ec54 SHA256 74ee09184055242f13c5051482dfcf4868f3bb571667445abc5c7cc7acfc2ba2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk5jYEcACgkQV3J2n04EauxfZwCgmnd5ETid/ipMElM3hfIqOWAN
-X0UAnA78UUJeWVI5vh9DxRW1dC4gFRoL
-=L38v
+iEYEARECAAYFAk9zS1IACgkQuQc30/atMkCXQACgn72PAl/+yveEB9lpMyTVZ3+2
+q/gAn25dmDkneNjzx40fJr9nWD9OmH3e
+=/vUq
 -----END PGP SIGNATURE-----
