@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Lirc-Client
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lirc-Client/ChangeLog,v 1.5 2011/07/29 18:28:43 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lirc-Client/ChangeLog,v 1.6 2012/03/29 11:15:25 ago Exp $
+
+  29 Mar 2012; Agostino Sarubbo <ago@gentoo.org> Lirc-Client-1.540.0.ebuild:
+  Stable for AMD64, wrt bug #407789
 
   29 Jul 2011; Torsten Veller <tove@gentoo.org> -Lirc-Client-1.51.ebuild:
   Cleanup
