@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Test-SubCalls
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-SubCalls/ChangeLog,v 1.23 2011/09/04 11:23:31 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-SubCalls/ChangeLog,v 1.24 2012/03/28 17:33:00 armin76 Exp $
+
+  28 Mar 2012; Raúl Porcel <armin76@gentoo.org> Test-SubCalls-1.90.0.ebuild:
+  Drop sparc keywords
 
   04 Sep 2011; Torsten Veller <tove@gentoo.org> -Test-SubCalls-1.09.ebuild:
   Cleanup
