@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/IO-Interface
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Interface/ChangeLog,v 1.28 2012/03/25 16:10:50 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Interface/ChangeLog,v 1.29 2012/03/28 17:42:08 armin76 Exp $
+
+  28 Mar 2012; Raúl Porcel <armin76@gentoo.org> IO-Interface-1.03.ebuild,
+  IO-Interface-1.60.0.ebuild:
+  Restore alpha keywords
 
   25 Mar 2012; Raúl Porcel <armin76@gentoo.org> IO-Interface-1.03.ebuild,
   IO-Interface-1.60.0.ebuild:
